<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.example.dipstore.viewModel.SignInViewModel" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".authentication.SignInActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                style="@style/darkTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_36sdp"
                android:layout_marginEnd="@dimen/_15ssp"
                android:text="@string/txt_sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubtitle"
                style="@style/lightText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:text="@string/txt_subtitle_login"
                android:textColor="@color/text_normal_color"
                app:layout_constraintEnd_toEndOf="@id/tvTitle"
                app:layout_constraintStart_toStartOf="@id/tvTitle"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlEmail"
                style="@style/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                app:endIconDrawable="@drawable/check"
                app:endIconMode="custom"
                app:endIconTint="@color/button_color"
                app:layout_constraintEnd_toEndOf="@id/tvSubtitle"
                app:layout_constraintStart_toStartOf="@id/tvSubtitle"
                app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
                app:startIconDrawable="@drawable/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_email"
                    android:text="@{viewModel.email}"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlPassword"
                style="@style/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="@id/tvSubtitle"
                app:layout_constraintStart_toStartOf="@id/tvSubtitle"
                app:layout_constraintTop_toBottomOf="@id/tlEmail"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/dark_text_color"
                app:startIconDrawable="@drawable/lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/editText"
                    android:text="@{viewModel.password}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotPassword"
                style="@style/lightTextGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/txt_forgot_pwd"
                app:layout_constraintEnd_toEndOf="@id/tlPassword"
                app:layout_constraintTop_toBottomOf="@id/tlPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignIn"
                style="@style/button_green"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:padding="@dimen/_12sdp"
                android:text="@string/txt_signin"
                app:layout_constraintEnd_toEndOf="@id/tvForgotPassword"
                app:layout_constraintStart_toStartOf="@id/tlPassword"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintEnd_toEndOf="@id/btnSignIn"
                app:layout_constraintStart_toStartOf="@id/btnSignIn"
                app:layout_constraintTop_toBottomOf="@id/btnSignIn">

                <View
                    android:id="@+id/lineStart"
                    style="@style/line"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_weight="0.3" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/txt_signin_with"
                    android:textAlignment="center" />

                <View
                    style="@style/line"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_weight="0.3" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignInGoogle"
                style="@style/buttonNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:drawableStart="@drawable/google"
                android:padding="@dimen/_12sdp"
                android:text="@string/txt_signin_google"
                app:layout_constraintEnd_toEndOf="@id/linearLayout"
                app:layout_constraintStart_toStartOf="@id/linearLayout"
                app:layout_constraintTop_toBottomOf="@id/linearLayout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignInApple"
                style="@style/buttonNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:drawableStart="@drawable/apple"
                android:padding="@dimen/_12sdp"
                android:text="@string/txt_signin_apple"
                app:layout_constraintEnd_toEndOf="@id/btnSignInGoogle"
                app:layout_constraintStart_toStartOf="@id/btnSignInGoogle"
                app:layout_constraintTop_toBottomOf="@id/btnSignInGoogle" />

            <ProgressBar
                android:id="@+id/pbSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="invisible"
                android:indeterminateTint="@color/button_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGoToSignup"
                style="@style/lightText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_78sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/txt_dont_have_account"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/btnSignInApple"
                app:layout_constraintStart_toStartOf="@id/btnSignInApple"
                app:layout_constraintTop_toBottomOf="@id/btnSignInApple"
                app:layout_goneMarginBottom="@dimen/_20sdp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>