<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InternalStorageFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlFileName"
        style="@style/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFileName"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/txt_file_name"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:text="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlData"
        style="@style/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@id/tlFileName"
        app:layout_constraintStart_toStartOf="@id/tlFileName"
        app:layout_constraintTop_toBottomOf="@id/tlFileName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etData"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_enter_data"
            android:imeOptions="actionDone" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdd"
        style="@style/button_green"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:padding="@dimen/_12sdp"
        android:text="@string/txt_add"
        app:layout_constraintEnd_toStartOf="@id/btnView"
        app:layout_constraintStart_toStartOf="@id/tlData"
        app:layout_constraintTop_toBottomOf="@id/tlData" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnView"
        style="@style/button_green"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp"
        android:text="@string/txt_view"
        app:layout_constraintEnd_toEndOf="@id/tlData"
        app:layout_constraintBottom_toBottomOf="@id/btnAdd"
        app:layout_constraintStart_toEndOf="@id/btnAdd"
        app:layout_constraintTop_toTopOf="@id/btnAdd" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@id/btnAdd"
        app:layout_constraintEnd_toEndOf="@id/btnView"
        app:layout_constraintTop_toBottomOf="@id/btnView"/>

</androidx.constraintlayout.widget.ConstraintLayout>